--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dopefolio",
+  "name": "portifolio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
     "compress:css": "node-sass css/style.css css/style.css --output-style compressed",
     "build": "npm-run-all prefix:css compress:css"
   },
-  "author": "",
+  "author": "ReginaldoJunior",
   "license": "GPL-3.0",
   "devDependencies": {
     "autoprefixer": "^10.3.1",
